--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,10 @@
 
+add to conf :
+
+[syspath]
+paths:C:/STUFF;C:
+Add to sys path.
+
 # Add a  sgeventlogcli.py to list all plugins and the matches:
 
 ```
